--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         image: ghcr.io/gethomepage/homepage:latest
         env:
           - name: HOMEPAGE_ALLOWED_HOSTS
-            value: launcher-admin.loutik.fr
+            value: launcher-admin.loutik.lab
         resources:
           requests:
             memory: "60Mi"
