--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: homepage-config
+  name: homepage-admin-config
   namespace: site-internet
 data:
   settings.yaml: |
@@ -49,7 +49,7 @@ data:
             icon: grafana
         - Authentik (SSO):
             href: https://sso.loutik.fr
-            siteMonitor: https://supervision.loutik.fr
+            siteMonitor: https://sso.loutik.fr
             icon: authentik
 
   bookmarks.yaml: |
