--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: homepage-launcher-admin
+  name: homepage-admin
   namespace: site-internet
 spec:
   entryPoints:
@@ -12,5 +12,5 @@ spec:
       #middlewares:
       #  - name: authentik-forwardauth
       services:
-        - name: homepage-launcher-admin
+        - name: homepage-admin
           port: 80
