homepage-utilisateur: changement de nom de l'entête du site

--- a/apps/homepage-utilisateur/config.yaml
+++ b/apps/homepage-utilisateur/config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: site-internet
 data:
   settings.yaml: |
-    title: Admin | Launcher LoutikCLOUD
+    title: Launcher LoutikCLOUD
     favicon: https://raw.githubusercontent.com/firetoak/medias/main/logo/logo_loutikhealth.png
     headerStyle: boxed
     hideVersion: true
