homepage-utilisateur: changer du nom de la configuration en homepage-config

--- a/apps/homepage-utilisateur/kustomization.yaml
+++ b/apps/homepage-utilisateur/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ingress.yaml
 
 configMapGenerator:
-  - name: homepage-admin-config
+  - name: homepage-config
     namespace: site-internet
     files:
       - settings.yaml
