--- a/apps/site-vitrine-loutik/ingress.yaml
+++ b/apps/site-vitrine-loutik/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: host(`www.loutik.lab`)
+    - match: host(`www.loutik.fr`)
       kind: Rule
       services:
         - name: site-vitrine-loutik
